Fix align to user-acount

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -28,6 +28,10 @@
         align-items: flex-start;
     }
 
+    .user-account {
+        align-items: flex-start;
+    }
+    
 
 
 }
