--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,17 @@ figure > img {
     gap: 15px;
 }
 
+/* sidebar-logo */
+
+.logo {
+    width: 135px;
+}
+
+.logo-small {
+    width: 30px;
+}
+
+/* nav-menu */
 .nav-menu {
     display: flex;
     flex-direction: column;
@@ -103,36 +114,7 @@ figure > img {
     gap: 10px;
 }
 
-.user-account{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    margin-top: auto;
-}
-
-.sidebar-section.playlist,
-.sidebar-logo .logo,
-.nav-menu .list-description,
-.section-dowland-app .description-action,
-.section-create-list .description-action,
-.account-description .user-name {
-    display: none;
-}
-
-.logo {
-    width: 135px;
-}
-
-.logo-small {
-    width: 30px;
-}
-
-.nav-menu img, 
-.account-description img {
-    width: 20px;
-}
-
+/* playlist */
 .sidebar-section h3 {
     margin-bottom: 15px;
 }
@@ -147,6 +129,35 @@ figure > img {
     display: flex;
     flex-direction: column;
     gap: 23px;
+}
+
+/*user-account */
+.user-account{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin-top: auto;
+}
+
+.user-account .section-dowland-app,
+.user-account .account-description {
+    display: flex;
+    gap: 10px;
+}
+
+.nav-menu img, 
+.account-description img {
+    width: 20px;
+}
+
+.sidebar-section.playlist,
+.sidebar-logo .logo,
+.nav-menu .list-description,
+.section-dowland-app .description-action,
+.section-create-list .description-action,
+.account-description .user-name {
+    display: none;
 }
 
 /* APP-TOOLBAR */
